# meditation-database

./: .env.example  .gitignore  README.md  config.py  pyproject.toml
config/: __init__.py  settings.py
core/: __init__.py  exceptions.py  interfaces.py
db/: crud.py  database.py  schema.py
docker/: .dockerignore  Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml
docs/: CHANGELOG.md  ROADMAP.md
docs/deployment/: NEXT_STEPS.md
docs/sprints/: README.md  SPRINT_2_IMPLEMENTATION.md  SPRINT_2_PHASE_2_GUIDE.md
ingestion/: __init__.py  chunking.py  embed.py  orchestrator.py  parsing.py  stages.py
scripts/: verify_database.py
