[tool.poetry]
name = "journalling-assistant"
version = "0.1.0"
description = "Semantic search and document processing infrastructure for meditation philosophy texts"
authors = [
    "Himanshu2398 <himanshubhardwaj2398@gmail.com>"
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

# Configuration management
pydantic = ">=2.0.0,<3.0.0"
pydantic-settings = ">=2.0.0,<3.0.0"

# Core dependencies
sqlalchemy = ">=2.0.43,<3.0.0"
psycopg2 = ">=2.9.10,<3.0.0"
pgvector = ">=0.3.0,<0.4.0"
python-dotenv = ">=1.0.0,<2.0.0"

# LangChain ecosystem
langchain = ">=0.3.27,<0.4.0"
langchain-postgres = ">=0.0.15,<0.0.16"
langchain-community = ">=0.3.0,<0.4.0"
langchain-experimental = ">=0.3.4,<0.4.0"
langchain-huggingface = ">=0.3.1,<0.4.0"
langchain-voyageai = "^0.1.7"

# Embedding and ML
sentence-transformers = ">=5.1.0,<6.0.0"
voyageai = "^0.3.4"
faiss-cpu = ">=1.12.0,<2.0.0"

# Document processing
llama-cloud-services = ">=0.6.64,<0.7.0"
markdownify = ">=1.2.0,<2.0.0"
semantic-chunkers = ">=0.1.1,<0.2.0"

# Optional dependencies
ollama = ">=0.5.3,<0.6.0"
openai = ">=1.106.1,<2.0.0"

[tool.poetry.group.dev.dependencies]
# Development tools
ipykernel = "^6.30.1"
jupyter = ">=1.1.1,<2.0.0"

# Testing
pytest = ">=8.0.0,<9.0.0"
pytest-asyncio = ">=0.23.0,<1.0.0"
pytest-cov = ">=4.0.0,<5.0.0"

# Code quality
ruff = ">=0.4.0,<1.0.0"
mypy = ">=1.10.0,<2.0.0"

# Database migrations (for future use)
alembic = ">=1.13.0,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "-ra"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow tests",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

